[package]
name = "tlp"
version = "0.1.0"
include = ["src/"]
edition = "2024"
description = "Typesafe Traffic Light Protocol (TLP) label"
readme = "README-crate.md"
repository = "https://github.com/robo9k/tlp-rs"
license = "MIT OR Apache-2.0"
categories = ["no-std", "parser-implementations"]
rust-version = "1.89"

[package.metadata.docs.rs]
targets = []
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[dependencies]
serde_core = { version = "1", optional = true, default-features = false }
schemars = { version = "1", optional = true, default-features = false }

[badges]
maintenance = { status = "experimental" }

[features]
default = ["std"]
alloc = []
std = ["alloc"]
## Enable `serde::{Deserialize, Serialize}` impls
serde = ["dep:serde_core"]
## Enable `schemars::JsonSchema` impl
schemars = ["dep:schemars", "alloc"]

[dev-dependencies]
serde_test2 = "2"
